public/styles.css
/* public/styles.css */

body {
  height: 100%;
}

header {
  border-radius: 0.5rem;
}

.header-container {
  width: 100%;
  position: relative;
  margin-bottom: 0;
}

.logo {
  display: flex;
  flex-direction: row;
}

.logo img {
  width: 10%;
}

.header-text {
  text-align: center;
  position: absolute;
  width: 100%;
  top: 1%; /* prevents title from overlapping w/ body */
}

.page-title-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin-top: 0;
}

a.btn-anchor {
  /* style <a> to look like a btn -- needed for add resort*/
  border-radius: 0.25rem;
  border: 1px solid transparent;
  padding: 0.5rem 1rem;
  color: #fff;
}

.card-columns {
  margin-top: 3px;
}

.card-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.btn-delete-date {
  background-color: transparent;
  text-decoration: none;
  border: none;
  position: absolute;
  right: 0;
  top: 0;
  font-size: 1rem;
  font-weight: 900;
}

.btn-delete-date:hover {
  background-color: transparent;
  color: skyblue;
}

.card-body {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 1% 5%;
}

.card-body-dates {
  justify-content: center;
}

.card-body:hover {
  background-color: skyblue;
  border-radius: 5px;
}

.card-body-dates:hover {
  background-color: transparent;
}

.card-titles-container {
  flex-direction: column;
}

.subtitle {
  font-size: large;
}

.card-buttons-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: space-between;
  gap: 2px;
}

.btn {
  width: 100%;
}

.btn-newResort {
  margin-bottom: 3px;
}

.alert {
  margin: 0;
}

.footer-container {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  border-radius: 10px;
}

.footer-text {
  font-size: 15px;
  width: 50%;
}

.footer-icon {
  font-size: 20px;
}

.footer-link {
  color: white;
}
.footer-link:hover {
  color: salmon;
  text-decoration: none;
}

